Remove message preview header customisations so the align correctly
Fixes #500

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -770,12 +770,6 @@ color: #a60201;
   }
 }
 
-div.correspondence p.preview_subject {
-  font-size: 1.2em;
-  margin-left: 10px;
-  line-height: 25px;
-}
-
 .describe_state_form {
   font-weight: 400;
   background: #E9FDD3;
